# ecommerce-microservices

app/auth/: Dockerfile  api.py  main.py  pyproject.toml
app/auth/models/: user.py
app/auth/routes/: user.py
app/auth/serializers/: user.py
app/auth/services/: user.py
app/auth/utils/: database.py  password.py  token.py
app/expiration/: package-lock.json  package.json
app/expiration/src/: index.ts
app/expiration/src/queues/: expiration.ts
app/order/: Dockerfile  api.py  dependency.py  main.py  pyproject.toml
app/order/events/publisher/: order.py
app/order/events/subscriber/: base.py  expiration.py  payment.py  product.py
app/order/models/: order.py
app/order/routes/: order.py
app/order/serializers/: order.py  product.py
app/order/services/: order.py
app/order/utils/: database.py  token.py
app/payment/: package-lock.json  package.json
app/payment/src/: index.ts
app/payment/src/controllers/: payment.ts
app/payment/src/middlewares/: authMiddleware.ts
app/payment/src/models/: order.model.ts  order.ts  payment.ts
app/payment/src/routes/: index.ts  payment.ts
app/payment/src/services/: payment.ts
app/product/: Dockerfile  api.py  main.py  pyproject.toml
app/product/events/publisher/: base.py  product.py
app/product/events/subscriber/: base.py  order.py  payment.py
app/product/models/: product.py
app/product/routes/: product.py
app/product/serializers/: product.py
app/product/services/: product.py
app/product/utils/: database.py  validator.py
k8s/: ingress-srv.yaml  payment-depl.yaml
(+8 files in other folders)
